<resources>
    <string name="app_name">Shoe City</string>
    <string name="email_address_title">Email Address</string>
    <string name="email_address_placeholder">Enter email address</string>
    <string name="enter_password_title">Enter Password</string>
    <string name="enter_password_placeholder">Enter password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="field_validation_error_message">Please fill in all fields</string>
    <string name="shoe_name_title">Shoe Name</string>
    <string name="shoe_name_placeholder">Enter shoe name</string>
    <string name="company_title">Company</string>
    <string name="enter_company_placeholder">Enter company</string>
    <string name="shoe_size_title">Shoe Size</string>
    <string name="enter_shoe_size_placeholder">Enter shoe size</string>
    <string name="description_title">Description</string>
    <string name="enter_description_placeholder">Enter description</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="shoe_listing_text">%1$s with size %2$.1f has been made by %3$s</string>
    <string name="welcome_to_shoe_city">Welcome to Shoe City</string>
    <string name="welcome_text_description">A high-end shoe shop is a luxurious store that specializes in selling high-quality, designer shoes. The shop itself is likely to be elegantly designed and decorated, with polished wood floors and elegant fixtures. The shoes on display are likely to be from top designers and brands, and may include a range of styles such as pumps, sandals, boots, and more. The prices for these shoes are likely to be high, reflecting their high quality and designer status. The shop may also offer a range of other services, such as shoe repair and customization. Overall, a high-end shoe shop is the perfect place for someone who values quality and style in their footwear.</string>
    <string name="proceed_button_text">Proceed</string>
    <string name="instructions_text">Here are the instructions:</string>
    <string name="instructions_description">The next screen shows a list of all the shoes currently on the platform. On that screen click the + icon to add a new shoe.</string>
    <string name="okay_button_text">Okay</string>
</resources>
