<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <!--The linear layout is suitable as there is not much complexity-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/email_address_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:ems="10"
            android:hint="@string/email_address_placeholder"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/enter_password_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:hint="@string/enter_password_placeholder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/login_button_text" />

        <Button
            android:id="@+id/createAccountButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/create_account_button_text" />
    </LinearLayout>
</layout>