<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoes.ShoeDetailFragment">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.shoes.ShoeViewModel" />
    </data>

    <!--    The constraint layout is used because it will increase performance for the many elements being drawn-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/shoe_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/shoeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:ems="10"
                android:hint="@string/shoe_name_placeholder"
                android:inputType="textCapSentences"
                android:text="@={shoeViewModel.shoeName}" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/company_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/companyNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:hint="@string/enter_company_placeholder"
                android:inputType="textCapSentences"
                android:text="@={shoeViewModel.shoeCompany}" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/shoe_size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/shoeSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:hint="@string/enter_shoe_size_placeholder"
                android:inputType="numberDecimal"
                android:text="@={shoeViewModel.shoeSize}" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/description_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:hint="@string/enter_description_placeholder"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:text="@={shoeViewModel.shoeDescription}" />

            <Button
                android:id="@+id/saveButton"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/save_button_text" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/cancel_button_text" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>