<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcome.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/welcome_to_shoe_city"
            android:textAlignment="center" />

        <TextView
            style="@style/mediumTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/welcome_text_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/proceedButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/proceed_button_text" />

    </LinearLayout>
</layout>