<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".instruction.InstructionFragment">

    <!--A simple layout. The linear layout is suitable as there is no complexity-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/instructions_text" />

        <TextView
            style="@style/mediumTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/instructions_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/okayButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:text="@string/okay_button_text" />
    </LinearLayout>


</layout>